--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 <div class="conteudo-senha">
 <label for="senha">Senha</label>
-<input name="senha" type="text" id="campo-senha">
+<input name="senha" type="text" id="campo-senha" readonly>
 </div>
 <div class="parametro">
 <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -64,5 +64,6 @@
 </div>
 </div>
 </section>
+<script src="main.js"></script>
 </body>
 </html>
